--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,17 +38,22 @@ dependencies:
   flutter_contacts: ^1.1.9+2
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
+  get_it: ^8.0.3
+  json_annotation: ^4.9.0
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  freezed: ^3.0.6
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
