--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -14,7 +14,7 @@ jobs:
       # Set up Flutter
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable' # or a specific version like '3.19.0'
+          flutter-version: '3.19.6' # or a specific version like '3.19.0'
 
       # Get project dependencies
       - name: Install dependencies
